@@ -2,8 +2,7 @@ From dbt2-base
 
 ARG PGVERSION
 
-ENV PATH="/usr/pgsql-${PGVERSION}/bin:$PATH"
-ENV PKG_CONFIG_PATH="/usr/pgsql-${PGVERSION}/lib/pkgconfig"
+ENV PATH="/usr/lib/postgresql/${PGVERSION}/bin:$PATH"
 
 COPY . /usr/local/src/dbt2
 WORKDIR /usr/local/src/dbt2
